sportologic web index.html a pozadí

--- a/sportologic-web/index.html
+++ b/sportologic-web/index.html
@@ -43,7 +43,8 @@
 			<section id="banner">
 				<h2>Sportologic</h2>
 				<p>Sportovní klub on-line.</p>
-				<ul class="actions">
+				
+				<ul class="actions" style="visibility: hidden">
 					<li>
 						<a href="#" class="button big">Funkce</a>
 					</li>
@@ -55,10 +56,9 @@
 				<div class="container">
 					<header class="major">
 						<h2>Funkce</h2>
-						<!--
-						<p>Lorem ipsum dolor sit amet, delectus consequatur, similique quia!</p>
-						-->
-					</header>
+						<br/>
+						<p>Intuitivní a jednoduchý systém pro řízení sportovního klubu.<br/>Šetří čas nad administrativou a usnadňuje růst sportovců a rozvoj klubu.</p>
+											</header>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<section class="box">
@@ -99,14 +99,21 @@
 							<section class="box">
 								<i class="icon big rounded color4 fa-envelope"></i>
 								<h3>Komunikace</h3>
-								<p>Hromadné odesílání zpráv pro vybrané skupiny rodičů, sportovců a trenérů.</p>
+								<p>Hromadné odesílání zpráv na vybrané skupiny rodičů, sportovců a trenérů nebo individuální komunikace s jednotlivci.</p>
 							</section>
 						</div>
-						<div class="4u$ 12u$(medium)">
+						<div class="4u 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color10 fa-mobile"></i>
 								<h3>Mobilita</h3>
 								<p>Jednoduché a intuitivní uživatelské rozhraní, použití na všech mobilních zařízeních.</p>
+							</section>
+						</div>
+						<div class="4u 12u$(medium)">
+							<section class="box">
+								<i class="icon big rounded color3 fa-download"></i>
+								<h3>Export dat</h3>
+								<p>Podpora stahování dat ze všech přehledů do xlsx a individuálních záznamů do pdf formátu.</p>
 							</section>
 						</div>
 					</div>
