web prezentation, bookmarks, price, distribution

--- a/sportologic-web/index.html
+++ b/sportologic-web/index.html
@@ -26,15 +26,14 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Sportologic</a></h1>
+				<h1>Sportologic</h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Domů</a></li>
-						<li><a href="index.html">Funkce</a></li>
-						<li><a href="generic.html">Ceník a distribuce</a></li>
-						<li><a href="generic.html">Kdo používá?</a></li>
-						<li><a href="#" class="button special">Napiště nám</a></li>
-						<li><a href="generic.html">Kontakt</a></li>
+						<li><a href="#one">Funkce</a></li>
+						<li><a href="#two">Ceník a distribuce</a></li>
+						<li><a href="#three">Kdo používá?</a></li>
+						<li><a href="#four" class="button special">Napiště nám</a></li>
+						<li><a href="#footer">Kontakt</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -52,7 +51,7 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper style1 special">
+			<section id="one" class="wrapper style1 special" >
 				<div class="container">
 					<header class="major">
 						<h2>Funkce</h2>
@@ -120,8 +119,60 @@
 				</div>
 			</section>
 
-		<!-- Two -->
 			<section id="two" class="wrapper style2 special">
+				<div class="container">
+					<header class="major">
+						<h2>Ceník a distribuce</h2>
+					</header>
+				</div>
+				<div class="container 50%">
+				<div class="table-wrapper">
+					<table>
+						<thead>
+							<tr>
+								<th style="text-align: center">Účastníků</th>
+								<th style="text-align: center">Standard</th>
+								<th style="text-align: center">Standard + modul Platby</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>1 - 100</td>
+								<td>249 Kč</td>
+								<td>599 Kč</td>
+							</tr>
+							<tr>
+								<td>100 - 200</td>
+								<td>332 Kč</td>
+								<td>759 Kč</td>
+							</tr>
+							<tr>
+								<td>200 a více</td>
+								<td>416 Kč</td>
+								<td>899 Kč</td>
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr>
+								<td colspan="2"></td>
+								<td style="text-align: right; font-size: 14px">Ceny jsou uvedeny za měsíc.</td>
+							</tr>
+						</tfoot>
+					</table>
+				</div>
+				</div>
+				<footer>
+					<br/>
+					<br/>
+					<p>
+						Systém je dodáván jako služba, není nutné nic instalovat, stačí pouze webový prohlížeč a připojení k Internetu. <br/>
+						Žádné starosti s instalací, hardwarem a další správou, vše včetně pravidelné zálohy dat řešíme za Vás.
+					</p>
+				</footer>
+			</section>
+
+		<!-- Two -->
+			<section id="three" class="wrapper style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Kdo používá?</h2>
@@ -133,30 +184,27 @@
 						<div class="row">
 							<section class="4u 6u(medium) 12u$(xsmall)">
 								<a href="https://www.plavanibohumin.cz" >
-									<img src="images/logo-pkbohumin.jpg" alt="" width="170px" />
+									<img src="images/logo-pkbohumin.jpg" alt="" width="140px" />
 								</a>
 							</section>
 							<section class="4u 6u$(medium) 12u$(xsmall)">
-								<img src="images/logo-kpsostrava.png" alt="" />
+								<a href="https://www.kpsostrava.cz/" >
+									<img src="images/logo-kpsostrava.png" alt="" width="240px" />
+								</a>
 							</section>
 							<section class="4u 6u(medium) 12u$(xsmall)">
-								<img src="images/logo-kosatky-karvina.png" alt="" width="170px" />
+								<a href="http://kosatkykarvina.cz/" >
+									<img src="images/logo-kosatky-karvina.png" alt="" width="140px" />
+								</a>
 							</section>
 						</div>
 					</section>
-					<footer>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolore illum, temporibus veritatis eligendi, aliquam, dolor enim itaque veniam aut eaque sequi qui quia vitae pariatur repudiandae ab dignissimos ex!</p>
-						<ul class="actions">
-							<li>
-								<a href="#" class="button big">Lorem ipsum dolor sit</a>
-							</li>
-						</ul>
-					</footer>
+					
 				</div>
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="wrapper style3 special">
+			<section id="four" class="wrapper style3 special">
 				<div class="container">
 					<header class="major">
 						<h2>Napiště nám!</h2>
@@ -186,15 +234,15 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="container">
+				<div class="container 50%">
 					<section class="links">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(small)">
 								<h3>Kontakt</h3>
-								<ul class="unstyled">
+								<ul class="unstyled" style="width: 200px">
 									<li>
 										<i class="icon color10 fa-envelope"></i>
-										&nbsp; info@sportologic.cz</li>
+										&nbsp; <a href="mailto:info@sportologic.cz">info@sportologic.cz</a></li>
 									<li>
 										<i class="icon color10 fa-phone"></i>
 										&nbsp;+420 001 002 003
@@ -205,27 +253,11 @@
 						</div>
 					</section>
 					<div class="row">
-						<div class="8u 12u$(medium)">
+						<div class="12u 12u$(medium)">
 							<ul class="copyright">
 								<li>&copy; Untitled. All rights reserved.</li>
 								<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 								<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
-							</ul>
-						</div>
-						<div class="4u$ 12u$(medium)">
-							<ul class="icons">
-								<li>
-									<a class="icon rounded fa-facebook"><span class="label">Facebook</span></a>
-								</li>
-								<li>
-									<a class="icon rounded fa-twitter"><span class="label">Twitter</span></a>
-								</li>
-								<li>
-									<a class="icon rounded fa-google-plus"><span class="label">Google+</span></a>
-								</li>
-								<li>
-									<a class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>
-								</li>
 							</ul>
 						</div>
 					</div>
