sportologic-web, změna na homepage

--- a/sportologic-web/index.html
+++ b/sportologic-web/index.html
@@ -69,8 +69,8 @@
 						<div class="4u 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color9 fa-calendar"></i>
-								<h3>Organizace kurzů a lekcí</h3>
-								<p>Evidence kurzů, lekcí a účastníků, zaznamenávání účasti na lekcích a poskytování statistiky o docházce.</p>
+								<h3>Organizace sezóny</h3>
+								<p>Evidence tréninků, kurzů, lekcí a účastníků, zaznamenávání účasti na lekcích a poskytování statistiky o docházce.</p>
 							</section>
 						</div>
 						<div class="4u$ 12u$(medium)">
@@ -131,25 +131,25 @@
 						<thead>
 							<tr>
 								<th style="text-align: center">Účastníků</th>
-								<th style="text-align: center">Standard</th>
-								<th style="text-align: center">Standard + modul Platby</th>
+								<th style="text-align: center">Premium</th>
+								<th style="text-align: center">Premium + modul Platby</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td>1 - 100</td>
-								<td>249 Kč</td>
-								<td>599 Kč</td>
+								<td>1 - 99</td>
+								<td>248 Kč</td>
+								<td>648 Kč</td>
 							</tr>
 							<tr>
-								<td>100 - 200</td>
-								<td>332 Kč</td>
-								<td>759 Kč</td>
+								<td>100 - 299</td>
+								<td>389 Kč</td>
+								<td>789 Kč</td>
 							</tr>
 							<tr>
-								<td>200 a více</td>
-								<td>416 Kč</td>
-								<td>899 Kč</td>
+								<td>300 a více</td>
+								<td>individuální cena</td>
+								<td>individuální cena</td>
 							</tr>
 						</tbody>
 						<tfoot>
