new version of sportologic web

--- a/scb-web/src/main/webapp/index.html
+++ b/scb-web/src/main/webapp/index.html
@@ -81,14 +81,17 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Sportologic</h2>
-				<p>Sportovní klub on-line.</p>
-				
-				<ul class="actions" style="visibility: hidden">
-					<li>
-						<a href="#" class="button big">Funkce</a>
-					</li>
-				</ul>
+				<p style="position: relative; top: -15px;">Sportovní klub on-line.</p>
 			</section>
+			
+<!-- 			<section id="two" class="wrapper style2 special"> -->
+<!-- 				<div class="container"> -->
+<!-- 					<header class="major"> -->
+<!-- 						<h2>Sportologic</h2> -->
+<!-- 						<p>Sportovní klub on-line.</p> -->
+<!-- 					</header> -->
+<!-- 				</div> -->
+<!-- 			</section> -->
 
 		<!-- One -->
 			<section id="one" class="wrapper style1 special" >
@@ -171,23 +174,28 @@
 						<thead>
 							<tr>
 								<th style="text-align: center">Účastníků</th>
-								<th style="text-align: center">Premium</th>
-								<th style="text-align: center">Premium + modul Platby</th>
+								<th style="text-align: center">Standard</th>
+								<th style="text-align: center">Standard + modul Platby</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td>1 - 99</td>
-								<td>248 Kč</td>
-								<td>648 Kč</td>
+								<td>1 - 199</td>
+								<td>1900 Kč</td>
+								<td>6800 Kč</td>
 							</tr>
 							<tr>
-								<td>100 - 299</td>
-								<td>389 Kč</td>
-								<td>789 Kč</td>
+								<td>200 - 299</td>
+								<td>3900 Kč</td>
+								<td>8800 Kč</td>
 							</tr>
 							<tr>
-								<td>300 a více</td>
+								<td>300 a 399</td>
+								<td>4900 Kč</td>
+								<td>9800 Kč</td>
+							</tr>
+							<tr>
+								<td>400 a více</td>
 								<td>individuální cena</td>
 								<td>individuální cena</td>
 							</tr>
@@ -195,7 +203,7 @@
 						<tfoot>
 							<tr>
 								<td colspan="2"></td>
-								<td style="text-align: right; font-size: 14px">Ceny jsou uvedeny za měsíc.</td>
+								<td style="text-align: right; font-size: 14px">Ceny jsou uvedeny za rok.</td>
 							</tr>
 						</tfoot>
 					</table>
