sdat-web, change in price fo payment

--- a/scb-web/src/main/webapp/index.html
+++ b/scb-web/src/main/webapp/index.html
@@ -175,29 +175,30 @@
 							<tr>
 								<th style="text-align: center">Účastníků</th>
 								<th style="text-align: center">Standard</th>
-								<th style="text-align: center">Standard + modul Platby</th>
+								<th style="text-align: center">Modul Platby</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
 								<td>1 - 199</td>
 								<td>1900 Kč</td>
-								<td>6800 Kč</td>
+<!-- 								<td>6800 Kč</td> -->
+								<td rowspan="4" style="vertical-align : middle;text-align:center;">+ 4900 Kč</td>
 							</tr>
 							<tr>
 								<td>200 - 299</td>
 								<td>3900 Kč</td>
-								<td>8800 Kč</td>
+<!-- 								<td>8800 Kč</td> -->
 							</tr>
 							<tr>
 								<td>300 a 399</td>
 								<td>4900 Kč</td>
-								<td>9800 Kč</td>
+<!-- 								<td>9800 Kč</td> -->
 							</tr>
 							<tr>
 								<td>400 a více</td>
 								<td>individuální cena</td>
-								<td>individuální cena</td>
+<!-- 								<td>individuální cena</td> -->
 							</tr>
 						</tbody>
 						<tfoot>
