--- a/scb-web/src/main/webapp/index.html
+++ b/scb-web/src/main/webapp/index.html
@@ -209,7 +209,7 @@
 						<tfoot>
 							<tr>
 								<td colspan="2"></td>
-								<td style="text-align: right; font-size: 14px">Ceny jsou uvedeny za rok.</td>
+								<td style="text-align: right; font-size: 14px">Ceny jsou uvedeny za rok včetně DPH.</td>
 							</tr>
 						</tfoot>
 					</table>
@@ -314,9 +314,7 @@
 					<div class="row">
 						<div class="12u 12u$(medium)">
 							<ul class="copyright">
-								<li>&copy; Sportologic</li>
-								<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-								<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+								<li>&copy; Copyright Sportologic, s.r.o. 2019. Všechna práva vyhrazena</li>
 							</ul>
 						</div>
 					</div>
