add general conditions to sportologic web

--- a/scb-web/src/main/webapp/index.html
+++ b/scb-web/src/main/webapp/index.html
@@ -313,6 +313,11 @@
 					</section>
 					<div class="row">
 						<div class="12u 12u$(medium)">
+							<ul class="unstyled">
+								<li>
+									<a target="_blank" rel="noopener noreferrer" href="sportologic-vseobecne-podminky.pdf">Všeobecné podmínky</a>
+								</li>
+							</ul>
 							<ul class="copyright">
 								<li>&copy; Copyright Sportologic, s.r.o. 2019. Všechna práva vyhrazena</li>
 							</ul>
