sb-web, labels on index.html

--- a/scb-web/src/main/webapp/index.html
+++ b/scb-web/src/main/webapp/index.html
@@ -72,7 +72,7 @@
 						<li><a href="#one">Funkce</a></li>
 						<li><a href="#two">Ceník a distribuce</a></li>
 						<li><a href="#three">Kdo používá?</a></li>
-						<li><a href="#four" class="button special">Napiště nám</a></li>
+						<li><a href="#four" class="button special">Napište nám</a></li>
 						<li><a href="#footer">Kontakt</a></li>
 					</ul>
 				</nav>
@@ -261,7 +261,7 @@
 			<section id="four" class="wrapper style3 special">
 				<div class="container">
 					<header class="major">
-						<h2>Napiště nám!</h2>
+						<h2>Napište nám!</h2>
 					</header>
 				</div>
 				<div class="container 50%">
