add sport club that are using application

--- a/scb-web/src/main/webapp/index.html
+++ b/scb-web/src/main/webapp/index.html
@@ -235,7 +235,7 @@
 						-->
 					</header>
 					<section class="profiles">
-						<div class="row">
+						<div class="row" >
 							<section class="4u 6u(medium) 12u$(xsmall)">
 								<a href="https://www.plavanibohumin.cz" >
 									<img src="images/logo-pkbohumin.jpg" alt="" width="140px" />
@@ -251,6 +251,19 @@
 									<img src="images/logo-kosatky-karvina.png" alt="" width="140px" />
 								</a>
 							</section>
+							<section class="4u 6u(medium) 12u$(xsmall)">
+								<a href="https://www.plavanifm.cz/" >
+									<img src="images/logo-plavanifm.png" alt="" width="140px" />
+								</a>
+							</section>
+							<section class="4u 6u(medium) 12u$(xsmall)" >
+								<a href="https://cs-cz.facebook.com/PLAVECK%C3%9D-KEMP-114018782020675/" >
+									<p style="font-weight: bold; background-color: white;">
+										Plavecký kemp<br/>Květoslava Svobody
+									</p>
+								</a>
+							</section>
+							
 						</div>
 					</section>
 					
